# SharedCabalDeps

./: foo.cabal
src/Foo/: Foo.hs
src2/: Main.hs
