name:                foo
version:             0.1
synopsis:            <Project description>
description:         <Project description>
category:            Tests
license:             OtherLicense
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.10
build-type:          Simple


Library
   hs-source-dirs:   src
   Build-depends:    base, zenc

   Exposed-modules:  Foo.Foo
   ghc-options:      -Wall


Executable helperApp
   Main-Is:           Main.hs
   hs-source-dirs:    src

   Build-Depends:     foo, base
--                      , zenc

   ghc-options:       -Wall

Executable helperApp2
   Main-Is:           Main.hs
   hs-source-dirs:    src2

   Build-Depends:     foo, base
--                      , zenc

   ghc-options:       -Wall
